fix hero on mobile

--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ article {
 	background-position: center;
 }
 
+.header--index {
+	height: 45vh;
+	position: relative;
+	color: var(--bg);
+	text-align: center;
+}
+
 .navbar {
 	background-color: var(--bg);
 	margin-left: 25px;
@@ -42,9 +49,7 @@ article {
 }
 
 .navbar__links {
-	visibility: hidden;
-	width: 0;
-	height: 0;
+	display: none;
 }
 
 .navbar__hamburger {
@@ -71,6 +76,27 @@ article {
 	margin-top: auto;
 	margin-bottom: auto;
 	padding: 10px;
+}
+
+.header__hero > h1 {
+	font-size: 30px;
+	font-weight: 800;
+}
+
+.header__hero > p {
+	font-size: 20px;
+	font-weight: 300;
+}
+
+.header__hero {
+	width: 100%;
+	margin-bottom: 20px;
+	position: absolute;
+	bottom: 0;
+}
+
+.header__hero > .btn {
+	display: none;
 }
 
 .btn {
@@ -153,20 +179,14 @@ footer {
 	}
 
 	.navbar__hamburger {
-		width: 0;
-		height: 0;
-		margin: 0;
-		visibility: hidden;
+		display: none;
 	}
 
 	.navbar__links {
-		visibility: visible;
 		display: flex;
 		color: var(--text--gray);
 		font-size: 16px;
 
-		width: auto;
-		height: auto;
 		margin-left: auto;
 		margin-right: 20px;
 	}
@@ -186,26 +206,22 @@ footer {
 	.header--index {
 		height: calc(100vh - 50px);
 		padding-top: 25px;
-
-		color: var(--bg);
-		text-align: center;
 	}
 
 	.header__hero > h1 {
 		font-size: 120px;
-		font-weight: 800;
 	}
 
 	.header__hero > p {
 		font-size: 60px;
-		font-weight: 300;
 	}
 
 	.header__hero {
-		width: 100%;
-		margin-bottom: 128px;
-		position: absolute;
-		bottom: 0;
+		margin-bottom: 84px;
+	}
+
+	.header__hero > .btn {
+		display: inline-block;
 	}
 
 	.heading {
